--- a/www/apps/book/app/learn/fundamentals/plugins/create/page.mdx
+++ b/www/apps/book/app/learn/fundamentals/plugins/create/page.mdx
@@ -125,7 +125,7 @@ module.exports = defineConfig({
   plugins: [
     {
       resolve: "@myorg/plugin-name",
-      options: {}
+      options: {},
     },
   ],
 })
