--- a/packages/admin/dashboard/src/i18n/translations/ro.json
+++ b/packages/admin/dashboard/src/i18n/translations/ro.json
@@ -298,6 +298,9 @@
     }
   },
   "filters": {
+    "sortLabel": "Sortare",
+    "filterLabel": "Filtrare",
+    "searchLabel": "Căutare",
     "date": {
       "today": "Astăzi",
       "lastSevenDays": "Ultimele 7 zile",
@@ -306,7 +309,9 @@
       "lastTwelveMonths": "Ultimele 12 luni",
       "custom": "Personalizat",
       "from": "Din",
-      "to": "La"
+      "to": "La",
+      "starting": "Pornire",
+      "ending": "Final"
     },
     "compare": {
       "lessThan": "Mai puțin decât",
@@ -316,6 +321,18 @@
       "lessThanLabel": "mai puțin decât {{value}}",
       "greaterThanLabel": "mai mare decât {{value}}",
       "andLabel": "şi"
+    },
+    "sorting": {
+      "alphabeticallyAsc": "A to Z",
+      "alphabeticallyDesc": "Z to A",
+      "dateAsc": "Cel mai nou primul",
+      "dateDesc": "Cel mai vechi primul"
+    },
+    "radio": {
+      "yes": "Da",
+      "no": "Nu",
+      "true": "Adevarat",
+      "false": "Fals"
     },
     "addFilter": "Adăugați filtru"
   },
@@ -468,7 +485,17 @@
       }
     },
     "deleteWarning": "Sunteți pe cale să ștergeți produsul {{title}}. ",
-    "variants": "Variante",
+    "variants": {
+      "header": "Variante",
+      "empty": {
+        "heading": "Nicio varianta",
+        "description": "Nu există variante de afișat."
+      },
+      "filtered": {
+        "heading": "Niciun rezultat",
+        "description": "Nicio variantă nu corespunde criteriilor actuale de filtrare."
+      }
+    },
     "attributes": "Atribute",
     "editAttributes": "Editați atribute",
     "editOptions": "Editare opțiuni",
@@ -643,6 +670,15 @@
         }
       }
     },
+    "stock": {
+      "heading": "Gestionați nivelurile stocurilor de produse și locațiile",
+      "description": "Actualizați nivelurile de inventar stocate pentru toate variantele de produs.",
+      "loading": "Așteaptă asta poate dura un moment...",
+      "tooltips": {
+        "alreadyManaged": "Acest articol de inventar este deja editabil sub {{title}}.",
+        "alreadyManagedWithSku": "Acest articol de inventar este deja editabil sub {{title}} ({{sku}})."
+      }
+    },
     "toasts": {
       "delete": {
         "success": {
@@ -799,6 +835,16 @@
       "updateLocations": "Locațiile au fost actualizate cu succes.",
       "updateLevel": "Nivelul inventarului a fost actualizat cu succes.",
       "updateItem": "Articolul din inventar a fost actualizat cu succes."
+    },
+    "stock": {
+      "title": "Actualizați nivelurile de inventar",
+      "description": "Actualizați nivelurile de inventar stocate pentru articolele de inventar selectate.",
+      "action": "Editați nivelurile stocurilor",
+      "placeholder": "Nu este activat",
+      "disablePrompt_one": "Sunteți pe cale să dezactivați {{count}} nivelul locației. Această acțiune nu poate fi anulată.",
+      "disablePrompt_other": "Sunteți pe cale să dezactivați {{count}} niveluri de locație. Această acțiune nu poate fi anulată.",
+      "disabledToggleTooltip": "Nu se poate dezactiva: ștergeți cantitatea primită și/sau rezervată înainte de dezactivare.",
+      "successToast": "Nivelurile de inventar au fost actualizate cu succes."
     }
   },
   "giftCards": {
@@ -872,6 +918,16 @@
   "customerGroups": {
     "domain": "Grupuri de clienți",
     "subtitle": "Organizați clienții în grupuri. ",
+    "list": {
+      "empty": {
+        "heading": "Fără grupuri de clienți",
+        "description": "Nu există grupuri de clienți de afișat."
+      },
+      "filtered": {
+        "heading": "Niciun rezultat",
+        "description": "Niciun grup de clienți nu corespunde criteriilor de filtrare curente."
+      }
+    },
     "create": {
       "header": "Creați un grup de clienți",
       "hint": "Creați un nou grup de clienți pentru a vă segmenta clienții.",
@@ -1914,7 +1970,19 @@
         }
       },
       "status": {
-        "title": "Stare"
+        "label": "Status",
+        "draft": {
+          "title": "Draft",
+          "description": "Clienții nu vor putea folosi încă codul"
+        },
+        "active": {
+          "title": "Activ",
+          "description": "Clienții vor putea folosi codul"
+        },
+        "inactive": {
+          "title": "Inactiv",
+          "description": "Clienții nu vor mai putea folosi codul"
+        }
       },
       "method": {
         "label": "Metodă",
@@ -2211,7 +2279,18 @@
       "developer": "Dezvoltator",
       "member": "Membru"
     },
+    "list": {
+      "empty": {
+        "heading": "Nu s-au găsit utilizatori",
+        "description": "Odată ce un utilizator a fost invitat, acesta va apărea aici."
+      },
+      "filtered": {
+        "heading": "Niciun rezultat",
+        "description": "Niciun utilizator nu corespunde criteriilor actuale de filtrare."
+      }
+    },
     "deleteUserWarning": "Sunteți pe cale să ștergeți utilizatorul {{name}}. ",
+    "deleteUserSuccess": "Utilizatorul {{name}} a fost șters cu succes",
     "invite": "Invita"
   },
   "store": {
@@ -2660,6 +2739,8 @@
     "scheduled": "Programat",
     "expired": "Expirat",
     "active": "Activ",
+    "inactive": "Inactiv",
+    "draft": "Draft",
     "enabled": "Activat",
     "disabled": "Dezactivat"
   },
